added the basic structure for the top bar & main navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project-1</title>
+    <title>NaiVbati Bridal Boutique</title>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <div>
+        (+679) 2385448 Open 7 Days from 9am to 7pm
+        <input type="search" name="" id="" />
+
+        <a href="#">facebook</a>
+        <a href="#">instagram</a> <a href="#">email</a> <a href="#">cart</a>
+        <a href="#">profile</a>
+      </div>
+    </section>
+    <section>
+      <header>
+        <h1>NaiVbati Bridal Boutique</h1>
+        <div>
+          <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">shop</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </div>
+      </header>
+    </section>
+  </body>
 </html>
