changed font color/size , added the body(overlap section)

--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>NaiVbati Bridal Boutique</title>
   </head>
   <body>
-    <section>
-      <div>
-        (+679) 2385448 Open 7 Days from 9am to 7pm
+    <section id="topbar">
+      <div class="topbar">
+        <span class="phone">(+679) 2385448</span>
+        <span>Open 7 Days from 9am to 7pm</span>
         <input type="search" name="" id="" />
 
         <a href="#">facebook</a>
         <a href="#">instagram</a> <a href="#">email</a> <a href="#">cart</a>
         <a href="#">profile</a>
+        <span>logout</span>
       </div>
     </section>
-    <section>
+    <section id=".body">
       <header>
-        <h1>NaiVbati Bridal Boutique</h1>
+        <h1 class="text-3xl">NaiVbati Bridal Boutique</h1>
         <div>
           <ul>
             <li><a href="#">home</a></li>
@@ -28,7 +32,16 @@
             <li><a href="#">contact</a></li>
           </ul>
         </div>
+        <section id=".body2">
+            <div class=".body2">
+            </div>
       </header>
+      <h1 class="text-3xl">
+        FIJIAN BRIDAL WEAR COLLECTION. " Browser the complete bridal 2022
+        collection "
+      </h1>
+    </section>
+      <div></div>
     </section>
   </body>
 </html>
