--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section id=".body">
       <header>
-        <h1 class="text-3xl">NaiVbati Bridal Boutique</h1>
+        <h1 class="text-4xl">NaiVbati Bridal Boutique</h1>
         <div>
           <ul>
             <li><a href="#">home</a></li>
@@ -37,10 +37,24 @@
             </div>
       </header>
       <h1 class="text-3xl">
-        FIJIAN BRIDAL WEAR COLLECTION. " Browser the complete bridal 2022
-        collection "
+        FIJIAN BRIDAL WEAR COLLECTION.
+    </h1>
+        <h1 class="text-1xl">
+            "Browser the complete bridal 2022
+            collection" 
+        </h1>
+       <input type="search"> 
       </h1>
     </section>
+    <header>
+        <h1 class="text-2xl">Some Of Our Finest Handmade Masi & Magimagi Dresses.
+        </h1>
+        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”> <img src=”008d688a4e9de33d604a4b9644de1565.jpeg)”> <img src=”(b48169ed7434cd5ba972fa4697c492b6.jpeg)”> <img src=”(objimage-2.jpeg)”>
+    </header>
+    <H1 class="text4xl">
+                    WANT THAT DREAM DRESS 
+                       FOR YOUR FIJIAN WEDDING?
+    </H1>
       <div></div>
     </section>
   </body>
