--- a/index.html
+++ b/index.html
@@ -51,11 +51,28 @@
         </h1>
         <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”> <img src=”008d688a4e9de33d604a4b9644de1565.jpeg)”> <img src=”(b48169ed7434cd5ba972fa4697c492b6.jpeg)”> <img src=”(objimage-2.jpeg)”>
     </header>
-    <H1 class="text4xl">
+    <h1 class="text4xl">
                     WANT THAT DREAM DRESS 
                        FOR YOUR FIJIAN WEDDING?
-    </H1>
-      <div></div>
+    </h1>
+    <section>
+    </section id=".PRODUCTS">
+    <header>
+        <h1 class="text 2xl">
+            OUR PRODUCTS!
+        </h1>
+        <div>
+        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”> <img src=”008d688a4e9de33d604a4b9644de1565.jpeg)”> <img src=”(b48169ed7434cd5ba972fa4697c492b6.jpeg)”> <img src=”(objimage-2.jpeg)”> 
+    </header> 
+      </div>
     </section>
+    <header>
+        <h1 class="text 2xl">
+        wedding Dresses From top Designers & Local designers.
+        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”>
+Unique & Custom Made Wedding Dresses.
+<img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”>
+        </h1>
+    </header>
   </body>
 </html>
