added placeholders images and started styling

--- a/index.html
+++ b/index.html
@@ -32,47 +32,52 @@
             <li><a href="#">contact</a></li>
           </ul>
         </div>
-        <section id=".body2">
-            <div class=".body2">
-            </div>
       </header>
-      <h1 class="text-3xl">
-        FIJIAN BRIDAL WEAR COLLECTION.
-    </h1>
-        <h1 class="text-1xl">
-            "Browser the complete bridal 2022
-            collection" 
-        </h1>
-       <input type="search"> 
+    </section>
+    <section id=".body2">
+      <div class=".body2"></div>
+      <h1 class="text-3xl">FIJIAN BRIDAL WEAR COLLECTION.</h1>
+      <h1 class="text-1xl">"Browser the complete bridal 2022 collection"</h1>
+      <input type="search" />
+    </section>
+    <header>
+      <h1 class="text-2xl">
+        Some Of Our Finest Handmade Masi & Magimagi Dresses.
       </h1>
-    </section>
-    <header>
-        <h1 class="text-2xl">Some Of Our Finest Handmade Masi & Magimagi Dresses.
-        </h1>
-        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”> <img src=”008d688a4e9de33d604a4b9644de1565.jpeg)”> <img src=”(b48169ed7434cd5ba972fa4697c492b6.jpeg)”> <img src=”(objimage-2.jpeg)”>
+      <div><img src="https://via.placeholder.com/150" /></div>
+      <div><img src="https://via.placeholder.com/150" /></div>
+      <div><img src="https://via.placeholder.com/150" /></div>
     </header>
-    <h1 class="text4xl">
-                    WANT THAT DREAM DRESS 
-                       FOR YOUR FIJIAN WEDDING?
-    </h1>
-    <section>
-    </section id=".PRODUCTS">
+    <h1 class="text4xl">WANT THAT DREAM DRESS FOR YOUR FIJIAN WEDDING?</h1>
+    <section id=".PRODUCTS"></section>
     <header>
-        <h1 class="text 2xl">
-            OUR PRODUCTS!
-        </h1>
+      <h1 class="text 2xl">OUR PRODUCTS!</h1>
+      <div>
         <div>
-        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”> <img src=”008d688a4e9de33d604a4b9644de1565.jpeg)”> <img src=”(b48169ed7434cd5ba972fa4697c492b6.jpeg)”> <img src=”(objimage-2.jpeg)”> 
-    </header> 
+          <img src="https://via.placeholder.com/150" />
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/150" />
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/150" />
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/150" />
+        </div>
       </div>
-    </section>
+    </header>
     <header>
-        <h1 class="text 2xl">
+      <h1 class="text 2xl">
         wedding Dresses From top Designers & Local designers.
-        <img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”>
-Unique & Custom Made Wedding Dresses.
-<img src=”(5df080153316daffdc218fa070c56707--tongan-wedding-samoa.jpeg)”>
-        </h1>
+        <div>
+          <img src="https://via.placeholder.com/150" />
+        </div>
+        Unique & Custom Made Wedding Dresses.
+        <div>
+          <img src="https://via.placeholder.com/150" />
+        </div>
+      </h1>
     </header>
   </body>
 </html>
