started playing around with tailwind to edit/add style to my project

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
       </div>
     </section>
     <section id=".body">
-      <header>
-        <h1 class="text-4xl">NaiVbati Bridal Boutique</h1>
+      <header style="background-color: lavender; font-size: x-large;" class="flex flex-row py-10">
         <div>
-          <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">shop</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">contact</a></li>
-          </ul>
+            <h1 class="text-4xl">NaiVbati Bridal Boutique</h1>
+        </div>
+        <div class="flex justify-end">
+             <div class="flex flex-row">
+                <div> <li><a href="#">home</a></li></div>
+                <div><li><a href="#">about</a></li> </div>
+                <div> <li><a href="#">shop</a></li></div>
+                <div><li><a href="#">blog</a></li></div>
+                <div> <li><a href="#">contact</a></li></div>
+            </div>
         </div>
       </header>
     </section>
@@ -40,44 +42,43 @@
       <h1 class="text-1xl">"Browser the complete bridal 2022 collection"</h1>
       <input type="search" />
     </section>
-    <header>
+    <header style="background-color: lavender;font-style: oblique;">
       <h1 class="text-2xl">
         Some Of Our Finest Handmade Masi & Magimagi Dresses.
       </h1>
-      <div><img src="https://via.placeholder.com/150" /></div>
-      <div><img src="https://via.placeholder.com/150" /></div>
-      <div><img src="https://via.placeholder.com/150" /></div>
+      <div class="flex flex-row ">
+        <div><div class="p-2"> <img src="https://via.placeholder.com/150" /></div></div>
+        <div><div class="p-2"> <img src="https://via.placeholder.com/150" /></div></div>
+        <div><div class="p-2"> <img src="https://via.placeholder.com/150" /></div></div>
+      </div>
     </header>
     <h1 class="text4xl">WANT THAT DREAM DRESS FOR YOUR FIJIAN WEDDING?</h1>
     <section id=".PRODUCTS"></section>
-    <header>
+    <header style="background-color: lavender; outline-style: solid;border-block-style:">
       <h1 class="text 2xl">OUR PRODUCTS!</h1>
-      <div>
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
+      <div class="flex flex-row ">
+        <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
+        <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
+        <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
+        <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
       </div>
     </header>
-    <header>
+    <header style="background-color: lavenderblush; border-style: solid; ">
       <h1 class="text 2xl">
         wedding Dresses From top Designers & Local designers.
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
-        Unique & Custom Made Wedding Dresses.
-        <div>
-          <img src="https://via.placeholder.com/150" />
-        </div>
+        <div class="flex flex-row ">
+            <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
+            <div class="p-2"> <img src="https://via.placeholder.com/150" /></div>
+          </div>
+        </header>
+        <header style="background-color:lavender; border-style: solid;">
+            Unique & Custom Made Wedding Dresses.
+            <div>
+              <img src="https://via.placeholder.com/150" />
+            </div>
+        </header>
       </h1>
     </header>
+</head>
   </body>
 </html>
