setup the body of the page and inserted placeholder images

--- a/product-listing-version.html
+++ b/product-listing-version.html
@@ -4,5 +4,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>product-listing2</title>
   </head>
-  <body></body>
+  <body
+    style="
+      background-color: lightblue;
+      background-image: url(images/aisle.jpeg);
+    "
+  >
+    <header
+      style="
+        background-color: rgb(218, 110, 110);
+        font-size: 12px;
+        padding: 0.1em;
+      "
+    >
+      <div>
+        <p>
+          NaiVbati Bridal <br />
+          Boutique.
+        </p>
+      </div>
+    </header>
+    <section
+      style="
+        font-style: italic;
+        font-size: 40px;
+        text-align: center;
+        background-color: rgb(255, 194, 194);
+      "
+    ></section>
+    <section style="background-color: bisque">
+      <h1 class="text-3xl">SOME OF OUR TOP DESIGNERS:</h1>
+      <table>
+        <tr>
+          <td width="20%;">
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+            <img
+              src="https://via.placeholder.com/150"
+              style="width: inherit"
+              alt=""
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+  </body>
 </html>
