used tailwind to format product-listing added padding & color

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
       </div>
     </section>
     <section id=".body">
-      <header style="background-color: lavender; font-size: x-large;" class="flex flex-row py-10">
-        <div>
+      <header style="background-image:url(aisle.jpeg) lavender; font-size: x-large;" class="flex flex-row py-10">
+        
+        <link rel="stylesheet" href="body.css"><div>
             <h1 class="text-4xl">NaiVbati Bridal Boutique</h1>
         </div>
         <div class="flex justify-end">
-             <div class="flex flex-row">
+             <div class="flex flex-row; flex space-x-4;> 
                 <div> <li><a href="#">home</a></li></div>
                 <div><li><a href="#">about</a></li> </div>
                 <div> <li><a href="#">shop</a></li></div>
