--- a/product-listing-version.html
+++ b/product-listing-version.html
@@ -3,20 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>product-listing2</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="product.css" />
   </head>
-  <body
-    style="
-      background-color: lightblue;
-      background-image: url(images/aisle.jpeg);
-    "
-  >
-    <header
-      style="
-        background-color: rgb(218, 110, 110);
-        font-size: 12px;
-        padding: 0.1em;
-      "
-    >
+  <body class="main-body">
+    <header class="top-header">
       <div>
         <p>
           NaiVbati Bridal <br />
@@ -24,62 +15,63 @@
         </p>
       </div>
     </header>
-    <section
-      style="
-        font-style: italic;
-        font-size: 40px;
-        text-align: center;
-        background-color: rgb(255, 194, 194);
-      "
-    ></section>
-    <section style="background-color: bisque">
-      <h1 class="text-3xl">SOME OF OUR TOP DESIGNERS:</h1>
-      <table>
-        <tr>
-          <td width="20%;">
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-            <img
-              src="https://via.placeholder.com/150"
-              style="width: inherit"
-              alt=""
-            />
-          </td>
-        </tr>
-      </table>
+    <section class="main-section"></section>
+    <header>
+      <section class="product-header">
+        <h1 class="text-1xl;">
+          UNIQUE DESIGNER MASI & MAGIMAGI PRINT DRESSES:
+        </h1>
+      </section>
+    </header>
+    <section>
+      <div class="flex space-x-4">
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+        <img
+          src="https://via.placeholder.com/150"
+          style="width: inherit"
+          alt=""
+        />
+      </div>
     </section>
   </body>
 </html>
